<resources>
    <string name="app_name">Currency Converter</string>
    <string name="title_axtivity_opening_screen">Assistant</string>
    <string name="convert">COVERT</string>
    <string name="zero">00</string>
    <string name="usdtxt">USD</string>
    <string name="eurtxt">EUR</string>
    <string name="inrtxt">INR</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="first_fragment_label">First Fragment</string>

    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string-array name="currency">
        <item>USD</item>
        <item>EURO</item>
        <item>INR</item>
    </string-array>
</resources>
