<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cryptocurrencypage"
    >
<!--    <include-->
<!--        android:id="@+id/crypto_page_toolbar"-->
<!--        layout="@layout/app_bar_layout"-->
<!--        ></include>-->
    <EditText

        android:background="#FFFACD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="5"
        android:id="@+id/et"
        android:layout_marginTop="93dp"
        android:layout_marginLeft="52dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:width="150dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cryptoname"
        android:layout_toRightOf="@+id/et"
        android:layout_marginTop="93dp"
        android:layout_marginLeft="100dp"
        android:text="BTC"
        android:textSize="25dp"
        android:textStyle="bold"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        android:id="@+id/btn"
        android:layout_marginTop="63dp"
        android:layout_below="@+id/et"
        android:layout_marginLeft="150dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/zero"
        android:id="@+id/cusd"
        android:layout_below="@+id/cTextView1"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="20dp"
        android:textSize="25dp"
        android:background="@color/colorPrimary"
        android:layout_marginRight="32dp"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/zero"
        android:id="@+id/ceur"
        android:layout_below="@+id/cTextView2"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="20dp"
        android:textSize="25dp"
        android:padding="8dp"
        android:background="@color/colorPrimary"
        android:layout_marginRight="32dp"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/zero"
        android:id="@+id/cinr"
        android:layout_below="@+id/cTextView3"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="20dp"
        android:textSize="25dp"
        android:padding="8dp"
        android:background="@color/colorPrimary"
        android:layout_marginRight="32dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/usdtxt"
        android:id="@+id/cTextView1"
        android:layout_below="@+id/btn"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="32dp"

        android:textSize="25dp"
        android:layout_marginRight="50dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/eurtxt"
        android:id="@+id/cTextView2"
     android:layout_below="@+id/cusd"
        android:layout_marginTop="20dp"

        android:layout_marginLeft="32dp"
        android:textSize="25dp"
        android:layout_marginRight="50dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/inrtxt"
        android:id="@+id/cTextView3"
      android:layout_below="@+id/ceur"
        android:layout_marginTop="20dp"

        android:layout_marginLeft="32dp"
        android:textSize="25dp"
        android:layout_marginRight="50dp"/>

</RelativeLayout>