<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.currencyconverter.MainActivity"
    >

    <include
        android:id="@+id/main_page_toolbar"
        layout="@layout/app_bar_layout"
        ></include>

    <EditText

        android:background="#FFFACD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="5"
        android:id="@+id/et"
        android:layout_marginTop="93dp"
        android:layout_marginLeft="52dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spin"
        android:layout_alignTop="@+id/et"
        android:layout_toRightOf="@+id/et"
        android:layout_toEndOf="@+id/et"
        android:layout_marginLeft="47dp"
        android:layout_marginStart="77dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        android:id="@+id/btn"
        android:layout_marginTop="63dp"
        android:layout_below="@+id/spin"
        android:layout_toRightOf="@+id/et"
        android:layout_toEndOf="@+id/et" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/zero"
        android:id="@+id/usd"
        android:layout_below="@+id/TextView1"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="20dp"
        android:textSize="25dp"
        android:background="@color/colorPrimary"
        android:layout_marginRight="32dp"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/zero"
        android:id="@+id/eur"
        android:layout_below="@+id/TextView2"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="20dp"
        android:textSize="25dp"
        android:padding="8dp"
        android:background="@color/colorPrimary"
        android:layout_marginRight="32dp"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/zero"
        android:id="@+id/inr"
        android:layout_below="@+id/TextView3"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="20dp"
        android:textSize="25dp"
        android:padding="8dp"
        android:background="@color/colorPrimary"
        android:layout_marginRight="32dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/usdtxt"
        android:id="@+id/TextView1"
        android:layout_below="@+id/btn"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="32dp"

        android:textSize="25dp"
        android:layout_marginRight="50dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/eurtxt"
        android:id="@+id/TextView2"
        android:layout_below="@+id/usd"
        android:layout_marginTop="20dp"

        android:layout_marginLeft="32dp"
        android:textSize="25dp"
        android:layout_marginRight="50dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/inrtxt"
        android:id="@+id/TextView3"
        android:layout_below="@+id/eur"
        android:layout_marginTop="20dp"

        android:layout_marginLeft="32dp"
        android:textSize="25dp"
        android:layout_marginRight="50dp"/>


</RelativeLayout>
